GNOME Bugzilla – Bug 729916
libjuicer: Fix empty fallback titles with some CDs
Last modified: 2014-05-12 11:08:09 UTC
.
Created attachment 276281 [details] [review] libjuicer: Fix empty fallback titles with some CDs My CD of "A Movie for Daddy" has some CD-Text information, but simply empty ones. Tracks 4 and 10 have " " as track titles, which we should ignore. Rework the setting of metadata to ignore strings that are full of spaces. This also fixes a small memory leak if the string contained a '\0' instead of simply being NULL.
Review of attachment 276281 [details] [review]: This looks good thanks apart from duplicating sj_str_is_empty() ::: libjuicer/sj-metadata-gvfs.c @@ +75,3 @@ +static gboolean +str_is_empty (const char *str) This is a duplicate of sj_str_is_empty() in sj-util.c
Created attachment 276330 [details] [review] libjuicer: Fix empty fallback titles with some CDs My CD of "A Movie for Daddy" has some CD-Text information, but simply empty ones. Tracks 4 and 10 have " " as track titles, which we should ignore. Rework the setting of metadata to ignore strings that are full of spaces. This also fixes a small memory leak if the string contained a '\0' instead of simply being NULL.
Review of attachment 276330 [details] [review]: Looks good, thanks
Attachment 276330 [details] pushed as 765eeb2 - libjuicer: Fix empty fallback titles with some CDs